--- a/src/app/component/body/body.component.css
+++ b/src/app/component/body/body.component.css
@@ -1,29 +1,3 @@
-
-@font-face {
-    font-family: Comic;
-    src: url(../../../../fonts/HeyComic.ttf) format('truetype');
-}
-@font-face {
-    font-family: kuda;
-    src: url(../../../../fonts/kuda.ttf) format('truetype');
-}
-@font-face {
-    font-family: scream;
-    src: url(../../../../fonts/SCREAM__.TTF) format('truetype');
-}
-@font-face {
-    font-family: potato;
-    src: url(../../../../fonts/Potato_sans-Bold.otf) format('truetype');
-}
-@font-face {
-    font-family: ligth;
-    src: url(../../../../fonts/KGWhYYouGoTtABeSoMeAn.ttf) format('truetype');
-}
-@font-face {
-    font-family: dk;
-    src: url(../../../../fonts/DKLongreach.otf) format('truetype');
-}
-
 main {
 display: flex;
 place-content: center;
@@ -32,7 +6,8 @@ width: 100%;
 padding: 0 0 0 0;
 margin: 0 0 0 0;
 }
-ul {
+
+.moviesContainer {
     display: grid;
     width: 100%;
     height: 100%;
@@ -43,7 +18,7 @@ ul {
     padding: 0 0 0 0;
     place-content: center;
     }
-li {
+app-movie {
     background-color: transparent;
     font-family: dk;
     text-align: center;
@@ -55,42 +30,13 @@ li {
     transition: transform .2s; 
   
 }
-li:hover {
+app-movie:hover {
     box-shadow: 0px 0px 9px 4px rgba(255,255,255,1);
     -webkit-box-shadow: 0px 0px 9px 4px rgba(255,255,255,1);
     -moz-box-shadow: 0px 0px 9px 4px rgba(255,255,255,1);
     transform: scale(1.03);
 }
-img {
-width: 100%;
-height: 80%;
-border-radius: 10px 10px 0 0;
-}
 
-.infoCard {
-opacity: 0.6;
-background-color: white;
-width: 100%;
-height: 20%;
-place-content: center;
-display: flex;
-align-items: center;
-flex-direction: column;
-border-radius:  0 0 10px 10px;
-letter-spacing: 0.5px;
-}
-h1 {
-font-size: 18px;
-width: 97%;
-text-align: center;
-padding: 0%;
-margin: 0%;
-}
-h4 {
-margin: 0%;
-font-family: ligth;
-
-}
 .filtersContainer {
     width: 100%;
     display: flex;
@@ -108,122 +54,7 @@ font-family: ligth;
     width: auto;
     padding: 0 15px 0 15px;
     font-size: 20px;
-    font-family: ligth;
+    font-family: light;
     border-radius: 10px;
     opacity: 0.8;
     }
-.selectedFirst {
-display: flex;
-width: 80%;
-flex-direction: column;
-}
-.selected-item {
-    display: grid;
-    grid-template-columns: 0.7fr 1.8fr;
-    grid-auto-rows: 400px;
-    margin: 0 0 20px 0;
-    padding: 0 0 0 0;
-   
-
-}
-    .posterSelected {
-    width: auto;
-    height: 100%;
-    border-radius: 10px;
-    border: 6px solid rgba(255, 255, 255, 0.4);
-    
-    }
-    .infoSelected {
-    /* opacity: 0.4; */
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.4);
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    }
-    .titleSelected {
-        font-family: dk;
-        font-weight: lighter;
-        font-size: 30px;
-        align-self: center;
-    }
-.textSelected {
-    font-family: ligth;
-    font-weight: bolder;
-    font-size: 20px;
-} 
-.selectedContentText {
-    font-weight: lighter;
-    font-family: ligth;
-    font-size: 20px;
-    word-spacing: 0.25em;
-}
-.backMovies {
-    display: flex;
-    width: 20%;
-    padding: 0 15px 0 15px;
-    margin: 15px;
-    font-size: 20px;
-    font-family: ligth;
-    border-radius: 10px;
-    opacity: 0.8;
-}
-.backMovies:hover {
-  background-color: black;
-color: white;
-border-style: solid;
-border-color: white;
-}
-.containerStars{
-    display: flex;
-    flex-direction: row;
-    gap: 3px;
-}
-/* .star {
-border-style: solid;
-border-color: black;
-background-color: white;
-font-family: ligth;
-width: auto;
-}  */
-#estrella {
-    margin-top: 15px;
-    position: relative;
-    display: block;
-    color: white;
-    width: 0px;
-    height: 0px;
-    border-right: 20px solid transparent;
-    border-bottom: 15px solid white;
-    border-left: 20px solid transparent;
-    transform: rotate(35deg);
-}
-
-#estrella:before {
-    border-bottom: 15px solid white;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    position: absolute;
-    height: 0;
-    width: 0;
-    top: -8.5px;
-    left: -11.25px;
-    display: block;
-    content: '';
-    transform: rotate(-35deg);
-}
-
-#estrella:after {
-    position: absolute;
-    display: block;
-    color: white;
-    top: 1px;
-    left: -19px;
-    width: 0px;
-    height: 0px;
-    border-right: 20px solid transparent;
-    border-bottom: 15px solid white;
-    border-left: 20px solid transparent;
-    transform: rotate(-70deg);
-    content: '';
-}
