--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -1,29 +1,3 @@
-
-@font-face {
-    font-family: Comic;
-    src: url(../../../../fonts/HeyComic.ttf) format('truetype');
-}
-@font-face {
-    font-family: kuda;
-    src: url(../../../../fonts/kuda.ttf) format('truetype');
-}
-@font-face {
-    font-family: scream;
-    src: url(../../../../fonts/SCREAM__.TTF) format('truetype');
-}
-@font-face {
-    font-family: potato;
-    src: url(../../../../fonts/Potato_sans-Bold.otf) format('truetype');
-}
-@font-face {
-    font-family: ligth;
-    src: url(../../../../fonts/KGWhYYouGoTtABeSoMeAn.ttf) format('truetype');
-}
-@font-face {
-    font-family: dk;
-    src: url(../../../../fonts/DKLongreach.otf) format('truetype');
-}
-
 .header-app {
 display: flex;
 place-content: center;
@@ -42,7 +16,7 @@ width: 100%;
 }
 .credits {
     font-weight: lighter;
-   font-family: ligth;
+   font-family: light;
    font-size: 15px;
     color: white;
     margin: 0%;
