--- a/src/app/view/view-principal/view-principal.component.html
+++ b/src/app/view/view-principal/view-principal.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<app-body></app-body>
+<app-body class="body-components"></app-body>
 <app-footer *ngIf="showFooter"></app-footer>
