--- a/src/app/component/body-detail/body-detail.component.css
+++ b/src/app/component/body-detail/body-detail.component.css
@@ -1,38 +1,37 @@
 .selectedFirst {
     display: flex;
-    width: 80%;
+    width: 85%;
     flex-direction: column;
     }
     .selected-item {
-        display: grid;
-        grid-template-columns: 0.7fr 1.8fr;
-        grid-auto-rows: 400px;
-        margin: 0 0 20px 0;
-        padding: 0 0 0 0;
-       
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        place-content: center;
+        margin-top: 20px;
     
     }
         .posterSelected {
-        width: auto;
-        height: 100%;
+        width: 20%;
+        height: auto;
         border-radius: 10px;
         border: 6px solid rgba(255, 255, 255, 0.4);
         
         }
         .infoSelected {
-        /* opacity: 0.4; */
+        width:55%;
         border-radius: 10px;
         background-color: rgba(255, 255, 255, 0.4);
         display: flex;
         flex-direction: column;
-        padding: 20px;
-        
+        padding: 30px;
+       
         }
        
     .selectedContentText, .textSelected, .titleSelected {
         font-weight: lighter;
         font-family: light;
-        font-size: 20px;
+        font-size: 25px;
         word-spacing: 0.25em;
         padding: 0;
         margin: 0;
@@ -50,70 +49,17 @@
 
     app-buttons {
         display: flex;
-        background-color: white;
+        border-color: white;
         width: 17%;
-        padding: 0;
-        margin: 15px;
+        margin-left: 150px;
         border-radius: 10px;
         opacity: 0.8;
+        border-style: solid;
     }
     app-buttons:hover {
-      background-color: black;
-    border-style: solid;
-    border-color: white;
+    box-shadow: 0px 0px 9px 4px rgba(255,255,255,1);
+    -webkit-box-shadow: 0px 0px 9px 4px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 9px 4px rgba(255,255,255,1);
+    transform: scale(1.03);
     }
-
-    .containerStars{
-        display: flex;
-        flex-direction: row;
-        gap: 3px;
-    }
-    /* .star {
-    border-style: solid;
-    border-color: black;
-    background-color: white;
-    font-family: ligth;
-    width: auto;
-    }  */
-    #estrella {
-        margin-top: 15px;
-        position: relative;
-        display: block;
-        color: white;
-        width: 0px;
-        height: 0px;
-        border-right: 20px solid transparent;
-        border-bottom: 15px solid white;
-        border-left: 20px solid transparent;
-        transform: rotate(35deg);
-    }
-    
-    #estrella:before {
-        border-bottom: 15px solid white;
-        border-left: 6px solid transparent;
-        border-right: 6px solid transparent;
-        position: absolute;
-        height: 0;
-        width: 0;
-        top: -8.5px;
-        left: -11.25px;
-        display: block;
-        content: '';
-        transform: rotate(-35deg);
-    }
-    
-    #estrella:after {
-        position: absolute;
-        display: block;
-        color: white;
-        top: 1px;
-        left: -19px;
-        width: 0px;
-        height: 0px;
-        border-right: 20px solid transparent;
-        border-bottom: 15px solid white;
-        border-left: 20px solid transparent;
-        transform: rotate(-70deg);
-        content: '';
-    }
-    
+   
