--- a/src/app/component/body/body.component.css
+++ b/src/app/component/body/body.component.css
@@ -1,12 +1,3 @@
-main {
-display: flex;
-place-content: center;
-align-items: center;
-width: 100%;
-padding: 0 0 0 0;
-margin: 0 0 0 0;
-}
-
 .moviesContainer {
     display: grid;
     width: 100%;
@@ -37,24 +28,13 @@ app-movie:hover {
     transform: scale(1.03);
 }
 
-.filtersContainer {
+app-filter {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     color: white;
-}
-.filters {
-    letter-spacing: 2px;
-    width: 50%;
-    gap: 20px;
-    display: flex;
-    padding: 0 0 20px 0;
-    }
-    #genre, #order {
-    width: auto;
-    padding: 0 15px 0 15px;
+    place-content: center;
+    padding-bottom: 20px;
     font-size: 20px;
     font-family: light;
-    border-radius: 10px;
-    opacity: 0.8;
-    }
+}
