--- a/src/app/component/buttons/buttons.component.html
+++ b/src/app/component/buttons/buttons.component.html
@@ -1,1 +1,3 @@
-<button [class]="btnClass">{{btnName}}</button>
+<button [class]="btnClass" [style.background-color]="btnName === btnSelected ? 'rgb(255, 255, 255)' : 'rgb(0, 0, 0)'"
+[style.color]="btnName === btnSelected ? 'rgb(0, 0, 0)' : 'rgb(255, 255, 255)'"
+>{{btnName}}</button>
