--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,12 +1,5 @@
 <main class='footer-page'>
-    <ul class="pagination">
-        <li 
-        *ngFor="let page of pages" 
-        (click)="changePage(page)"
-        class="pagesitems" 
-        [ngClass]="{'active':page===currentPage}">
-        {{page}}
-    </li>
-
-    </ul>
+    <div class="pagination">
+        <app-buttons *ngFor="let page of pages" [btnName]="page" [btnSelected]="pageSelected" [btnClass]="'pagesitems'" (click)="changePage(page)"></app-buttons>
+    </div>
 </main>
