--- a/src/app/view/Home/components/Body/body.component.scss
+++ b/src/app/view/Home/components/Body/body.component.scss
@@ -2,8 +2,8 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-columns: repeat(5, 180px);
-    grid-auto-rows: minmax(auto, 320px);
+    grid-template-columns: repeat(2, 130px);
+    grid-auto-rows: minmax(auto, auto);
     grid-gap: 25px;
     place-content: center;
 }
@@ -34,16 +34,43 @@ app-filter {
     // background-color: aqua;
     width: 78%;
     display: flex;
-    margin-bottom:2%;
+    margin-bottom:5%;
     gap: 10px;
-    flex-direction: row;
+    flex-direction: column;
     color: white;
     // place-content:initial;
-    place-content: center;
+    align-items: center;
+    justify-content: center;
     // font-size: 18px;
-    font-family: light;
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
 
+}
+
+
+//tablets
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .moviesContainer {
+        grid-template-columns: repeat(4, 150px);
+        grid-auto-rows: minmax(auto, auto);
+    }
+    app-filter {
+        flex-direction: row;
+        margin-bottom:3%;
+    }
+}
+
+//pc
+@media only screen and (min-width: 1025px) {
+
+    .moviesContainer {
+        grid-template-columns: repeat(5, 180px);
+        grid-auto-rows: minmax(auto, 320px);
+    }
+
+    app-filter {
+        flex-direction: row;
+        margin-bottom:2%;
+    }
 }
