--- a/src/app/view/Home/components/Header/header.component.scss
+++ b/src/app/view/Home/components/Header/header.component.scss
@@ -13,8 +13,8 @@ width: 100%;
   background: radial-gradient(circle, #fff 0%, rgb(90, 90, 90) 120%);
   background-clip: text;
   -webkit-text-fill-color: transparent;    
-  letter-spacing: 4px;
-  font-size: 60px;
+  letter-spacing: 2px;
+  font-size: 48px;
   animation: glow 2500ms linear infinite 2000ms;
 }
 
@@ -23,3 +23,22 @@ width: 100%;
       text-shadow: 0 0 8px #fff;
     }
   }
+
+
+  //tablets
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .title {
+    font-size: 60px;
+    letter-spacing: 4px;
+  }
+  
+}
+
+//pc
+@media only screen and (min-width: 1025px) {
+  .title {
+    font-size: 60px;
+    letter-spacing: 4px;
+  }
+  
+}
