--- a/src/app/component/body-detail/body-detail.component.scss
+++ b/src/app/component/body-detail/body-detail.component.scss
@@ -32,19 +32,43 @@
 }
 
 .rating-overlay {
+    // position: absolute;
+    // top: 110px;
+    // right: 55px;
+    // opacity: 0;
+    // transition: opacity 0.3s ease-in-out;
     position: absolute;
-    top: 110px;
-    right: 55px;
+    top: 0;
+    right: 0;
+    /* right: 55px; */
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
+//   .img_star {
+// height: 30%;
+
+//   }
 
   .star_rate_text {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 900;
     position: absolute;
-    top: 45px;
-    left: 40px;
+    // top: 45px;
+    // left: 40px;
+    // top: 46%;
+    // left: 42%;
+    // background-color: aqua;
+    padding-top: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 36px;
     color: black;
   }
