--- a/src/app/view/Home/components/Body/body.component.scss
+++ b/src/app/view/Home/components/Body/body.component.scss
@@ -2,13 +2,17 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-columns: repeat(2, 130px);
-    grid-auto-rows: minmax(auto, auto);
+    grid-template-columns: repeat(2, 140px);
+    grid-auto-rows: minmax(auto, 270px);
     grid-gap: 25px;
     place-content: center;
 }
 
 app-movie {
+
+    // opacity: 0.6;
+    background-color: rgba(255, 255, 255, 0.725);
+
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -53,7 +57,7 @@ app-filter {
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     .moviesContainer {
         grid-template-columns: repeat(4, 150px);
-        grid-auto-rows: minmax(auto, auto);
+        grid-auto-rows: minmax(auto, 290px);
     }
     app-filter {
         flex-direction: row;
