--- a/src/app/view/Home/components/Body/components/Movie/movie.component.scss
+++ b/src/app/view/Home/components/Body/components/Movie/movie.component.scss
@@ -1,29 +1,52 @@
+
+
 img {
     width: 100%;
-    height: 80%;
+    height: auto;
     border-radius: 10px 10px 0 0;
 }
 
 .infoCard {
-    opacity: 0.6;
-    background-color: white;
     width: 100%;
-    height: 20%;
+    // height: 20%;
+    height: 100%;
     place-content: center;
     display: flex;
     align-items: center;
     flex-direction: column;
-    border-radius:  0 0 10px 10px;
+    // border-radius:  0 0 10px 10px;
     letter-spacing: 0.5px;
 }
-
-h1 {
+.title-container {
+    width: 90%;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content: center; 
+  }
+  
+  
+  h1 {
     font-size: 18px;
-    width: 97%;
+    white-space: nowrap; 
+    overflow: visible; 
+    width: max-content;
     text-align: center;
-    padding: 0%;
-    margin: 0%;
-}
+    animation: none; 
+  }
+  
+  h1.animated {
+    animation: scrollText 5s linear infinite;
+  }
+  
+  @keyframes scrollText {
+    from {
+      transform: translateX(20%);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
 
 h4 {
     margin: 0%;
@@ -31,3 +54,13 @@ h4 {
     font-weight: 400;
     font-style: normal;
 }
+
+//pc
+@media only screen and (min-width: 1025px) {
+    img {
+        width: 100%;
+        height: 80%;
+        // border-radius: 10px 10px 0 0;
+    }
+}
+
