--- a/src/app/view/Home/components/Footer/footer.component.html
+++ b/src/app/view/Home/components/Footer/footer.component.html
@@ -2,4 +2,13 @@
     <div class="pagination">
         <button *ngFor="let page of pages" [ngClass]="{'pageItemSelected': page === pageSelected, 'pageItem': page !== pageSelected}" (click)="changePage(page)">{{page}}</button>
     </div>
+
+    <!-- <p-paginator 
+    (onPageChange)="onPageChange($event)" 
+    [first]="first" 
+    [rows]="rows" 
+    [totalRecords]="120" 
+    [rowsPerPageOptions]="[10, 20, 30]">
+  </p-paginator> -->
+  
 </main>
