--- a/src/app/view/Home/components/Header/header.component.scss
+++ b/src/app/view/Home/components/Header/header.component.scss
@@ -3,7 +3,7 @@ display: flex;
 place-content: center;
 align-items: center;
 flex-direction: column;
-margin: 2% 0 1% 0;
+margin: 3% 0 1% 0;
 width: 100%;
 }
 .title {
@@ -14,7 +14,7 @@ width: 100%;
   background-clip: text;
   -webkit-text-fill-color: transparent;    
   letter-spacing: 2px;
-  font-size: 48px;
+  font-size: 55px;
   animation: glow 2500ms linear infinite 2000ms;
 }
 
@@ -28,10 +28,12 @@ width: 100%;
   //tablets
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   .title {
-    font-size: 60px;
-    letter-spacing: 4px;
+    font-size: 75px;
+    letter-spacing: 3px;
   }
-  
+  .header-app {
+    margin: 2% 0 1% 0;
+    }
 }
 
 //pc
@@ -40,5 +42,7 @@ width: 100%;
     font-size: 60px;
     letter-spacing: 4px;
   }
-  
+  .header-app {
+    margin: 2% 0 1% 0;
+  }
 }
