--- a/src/app/view/Home/components/Body/body.component.scss
+++ b/src/app/view/Home/components/Body/body.component.scss
@@ -9,10 +9,7 @@
 }
 
 app-movie {
-
-    // opacity: 0.6;
     background-color: rgba(255, 255, 255, 0.725);
-
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -35,17 +32,14 @@ app-movie:hover {
 }
 
 app-filter {
-    // background-color: aqua;
     width: 78%;
     display: flex;
     margin-bottom:5%;
     gap: 10px;
     flex-direction: column;
     color: white;
-    // place-content:initial;
     align-items: center;
     justify-content: center;
-    // font-size: 18px;
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -61,6 +55,7 @@ app-filter {
     }
     app-filter {
         flex-direction: row;
+        width: 85%;
         margin-bottom:3%;
     }
 }
