--- a/src/app/view/Home/components/Body/components/Filter/filter.component.scss
+++ b/src/app/view/Home/components/Body/components/Filter/filter.component.scss
@@ -23,9 +23,7 @@ app-select-filter {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     width: 100%;
-    // height: 100%;
     border-radius: 10px;
-    // padding: 0px 10px;
     border: none;
     outline: none;
     background-color: transparent;
@@ -89,11 +87,13 @@ button:hover {
 //tablets
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     .container_search {
-        width: 55%;
+        width: 60%;
     }
-
+    .input_search {
+        font-size: 25px;
+    }
     button {
-        font-size: 20px;
+        font-size: 25px;
     }
     
     select {
@@ -104,6 +104,9 @@ button:hover {
         font-size: 12px !important;
         margin: 0 !important;
         padding: 0 !important;
+    }
+    .filtersContainer>h4 {
+        font-size: 25px;
     }
 }
 
