--- a/src/app/view/Home/components/Body/components/Filter/filter.component.scss
+++ b/src/app/view/Home/components/Body/components/Filter/filter.component.scss
@@ -35,7 +35,7 @@ app-select-filter {
 .container_filters_main {
     display: flex;
     flex-direction: row;
-    gap: 15px;
+    gap: 10px;
 }
 
 .filtersContainer {
@@ -58,6 +58,7 @@ select {
     font-weight: 400;
     font-style: normal;
     font-size: 16px;
+    width: 60px;
 }
 
 option {
@@ -98,6 +99,7 @@ button:hover {
     
     select {
         font-size: 18px;
+        width: auto;
     }
           
     option {
@@ -107,6 +109,9 @@ button:hover {
     }
     .filtersContainer>h4 {
         font-size: 25px;
+    }
+    .container_filters_main {
+        gap: 15px;
     }
 }
 
@@ -120,11 +125,15 @@ button:hover {
         font-size: 20px;}
   select {
     font-size: 18px;
+    width: auto;
   }
   
 option {
     font-size: 18px !important;
     margin: 0 !important;
     padding: 0 !important;
+}
+.container_filters_main {
+    gap: 15px;
 }
 }
