--- a/src/styles.scss
+++ b/src/styles.scss
@@ -156,3 +156,11 @@ html, body {
       display: flex;
           height: 80%;
       }
+
+      //tablets
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+
+  app-body-detail{
+        height: 88%;
+    }
+}
