--- a/src/app/view/Home/components/Body/body.component.html
+++ b/src/app/view/Home/components/Body/body.component.html
@@ -1,5 +1,10 @@
 <app-filter></app-filter>
 
+
+<div  *ngIf="loading" class="loading-container">
+  <i class="pi pi-spinner pi-spin"></i>
+</div>
+
 <div class="moviesContainer">
     <app-movie (click)="viewDetailMovie(movie)" *ngFor="let movie of dataPeerPage" [movie] = 'movie'>
   </app-movie>
