--- a/src/app/view/Home/components/Body/body.component.scss
+++ b/src/app/view/Home/components/Body/body.component.scss
@@ -2,8 +2,8 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-columns: repeat(2, 140px);
-    grid-auto-rows: minmax(auto, 270px);
+    grid-template-columns: repeat(2, 135px);
+    grid-auto-rows: minmax(auto, 255px);
     grid-gap: 25px;
     place-content: center;
 }
@@ -46,6 +46,11 @@ app-filter {
 
 }
 
+.pi-spinner {
+    font-size: 3rem;
+    color: white;
+    margin-top: 35px;
+}
 
 //tablets
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
