--- a/src/app/view/Home/view-principal.component.scss
+++ b/src/app/view/Home/view-principal.component.scss
@@ -11,6 +11,9 @@ width: 100%;
     flex-direction: column;
 }
 
-app-footer{
+app-footer {
     width: 100%;
+    margin-top: auto;
+    //     position: absolute;
+    //   bottom: 0;
 }
