--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,7 +101,10 @@ app-root {
   
 app-view-principal {
   width: 100%;
-  height: 100%;  
+  height: 100%;
+  
+  display: flex;
+  flex-direction: column;
 }
 
 app-view-detail {
